element spacing fixes

--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,6 +1,8 @@
 .search{
   display: flex;
   width: var(--layout-width);
+  margin-top: 0;
+  margin-bottom: 20px;
 }
 
 .search-bar{
@@ -9,6 +11,7 @@
   gap: 10px;
   position: relative;
   width: 100%;
+  
 }
 
 .search-bar * {
